$Id: ChangeLog,v 1.22 2002/12/17 03:51:40 uehira Exp $

2002-12-17 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvstatus2.c : bug fix
	* Version 1.1.12 released.
	
2002-12-10 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* relay.c : added options -i, -p, -t(-T) and in_port=0 for stdin

2002-11-29 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvt.c : corrected byte-order of port no. in log
	* send_raw.c : added option -p to set source port (-p src_port)

2002-10-27 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* shmdump.c : input from 'stdin' by specifying Shm key as '-'
	* send_raw.c : added -T option to set TTL
	* Version 1.1.10 released.

2002-09-12 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
        * insert_raw2 : updates mon file if mon dir is specified in the 5th line of prm file.
        * pmon.c : introduced "-d [delay minute]" like in wtape.c
	* Version 1.1.9 released.

2002-09-05 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win.c : fixed a bug in picking the first sec.
	* clean_nmx : script for cleaning up fragment data directory of recvnmx
	* events.c : introduced "-u [dir]" option for USED_EVENTS file.
	* Version 1.1.8 released.

2002-08-10 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* automatically set win path in 'w2m'.

2002-08-09 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* edit AUTHORS (add Dr. TSURUOKA)
	
2002-08-09 Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* wed.c 1.4  Ignore illegal lines in ch list
	* recvnmx.c 1.15  process re-tx packets properly using frag-dir (-d)
	
2002-08-08 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.7 released.
	* import 'shmx' and 'shmx2'
	  written by TSURUOKA Hiroshi (tsuru@eri.u-tokyo.ac.jp).
	
2002-07-23 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
        * Version 1.1.4 released.
	* add win2raw.c

2002-05-15 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.1 released.
	* wform.c
	  import winform() function from winform.c

2002-05-03 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.0.4 released.